tests/baselines/reference/annotationApplicationError13.errors.txt
tests/cases/conformance/annotations/annotationApplicationError13.ets(1,1): error TS28026: Annotation cannot be applied for annotation declaration.


==== tests/cases/conformance/annotations/annotationApplicationError13.ets (1 errors) ====
    @Anno
    ~~~~~
!!! error TS28026: Annotation cannot be applied for annotation declaration.
    @interface Anno {
        a: number = 10
        b: string[] = []
    }